--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="images/power.jpg" class="logo"></a>
+            <a href="index.html"><img src="images/power.jpg"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="">HOME</a></li>
-                    <li><a href="">WHAT IS THIS</a></li>
+                    <li><a href="#section-wit">WHAT IS THIS</a></li>
                     <li><a href="">WHAT AM I</a></li>
                     <li><a href="">PEOPLE I KNOW</a></li>
                     <li><a href="">SEX</a></li>
