--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="images/power.jpg"></a>
+            <a href="./index"><img src="images/power.jpg"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
                 <ul>
