--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <h1>
                 Roll's Website
             </h1>
-            <p>me aburria mucho pues me puse a aprender html y esto es para gastarme el tiempo</p>
-            <a href="" class="hero-btn">thing thats here because the tutorial told me to add it</a>
+            <p>i was really bored so i started learning html to waste some time and do silly stuff bleh</p>
+            <a href="" class="hero-btn">thing that currently doesnt work but i gotta go sleep</a>
         </div>
     </section>
 
