--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
                 <p>Use the command /code and insert the code "website" for 100 robcoins!</p>
             </div>
         </div>
+        <div class="rodarheader">
+            <h2 id="rht">Add Rodar to your server now!</h2>
+            <p id="rht">If this convinced you (hopefully), you can add your Discord Bot with the button below!</p>
+            <a href="https://discord.com/api/oauth2/authorize?client_id=1178748710461640754&permissions=8&scope=bot">Click Here to Add The Bot</a>
+        </div>
     </section>
 
     <!------JavaScript for Toggle Menu------>
