--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rolls Site</title>
+    <link rel="icon" type="image/x-icon" href="images/power.ico">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +21,7 @@
                     <li><a href="">HOME</a></li>
                     <li><a href="#whatisthis">WHAT IS THIS</a></li>
                     <li><a href="#rodar">RODAR BOT</a></li>
-                    <li><a href="">PEOPLE I KNOW</a></li>
+                    <li><a href="">PLACEHOLDER STUFF LOLOL</a></li>
                     <li><a href="">SEX</a></li>
                     <li><a href="">BALLS</a></li>
                 </ul>
