--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="#whatisthis">WHAT IS THIS</a></li>
-                    <li><a href="#rodar">RODAR BOT</a></li>
-                    <li><a href="">PLACEHOLDER STUFF LOLOL</a></li>
-                    <li><a href="">SEX</a></li>
-                    <li><a href="">BALLS</a></li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="#whatisthis">What Is This</a></li>
+                    <li><a href="#rodar">Rodar Bot</a></li>
+                    <li><a href="./ttmc">Text To Morse Code</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
@@ -44,23 +42,21 @@
         <h1>What is this?</h1>
             <div class="row">
                 <div class="wit-col">
-                    <h3>Why?</h3>
-                    <p>i literally just explained why, but im going to copy and paste
-                        my reason to waste more space. this is literally just a random website i made to waste my time trying to do something so i have better chances at a future with a job that won't dissapoint everyone 
-                        and will make me more than 5 bucks a day.
+                    <h3>Me</h3>
+                    <p>hello!!!!! im roll and i like coding, playing videogames and doing silly stuff
                     </p>
                 </div>
                 <div class="wit-col">
-                    <h3>When?</h3>
-                    <p>like right now in the present. btw the date is 12/25/23. yes it was
-                        just christmas, i had a good christmas. it was a fun christmas i did
-                        christmas stuff such as eat food i guess and do more christmas activities. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga autem quis blanditiis. Alias tempore omnis architecto tenetur, voluptas vero explicabo.
+                    <h3>This Website</h3>
+                    <p>
+                        this is a website where im going to store the projects i work on to give info on it and links to stuff
                     </p>
                 </div>
                 <div class="wit-col">
-                    <h3>How?</h3>
-                    <p>this is literally just a random website i made to waste my time trying to do something so i have better chances at a future with a job that won't dissapoint everyone 
-                        and will make me more than 5 bucks a day. yes i just copy and pasted the same thing again im too lazy. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique quisquam voluptate magnam quasi soluta amet saepe eius, corporis delectus nisi.</p>
+                    <h3>More Random Info</h3>
+                    <p>
+                        this was also just to learn how to make websites so i have better chances at a future with a job that pays more than 5 euros per hour
+                    </p>
                 </div>
             </div>
     </section>
