--- a/clock.html
+++ b/clock.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time in Your Timezone</title>
     <style>
-        *{
+        * {
             font-family: 'Open Sans', sans-serif;
         }
+
         body {
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: space-between;
             height: 100vh;
             margin: 0;
             transition: background-color 0.5s;
@@ -19,6 +21,10 @@
 
         .container {
             text-align: center;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
         h1 {
@@ -27,8 +33,7 @@
         }
 
         #time {
-            font-size: 24px;
-            margin-top: 10px;
+            font-size: calc(20vh + 20px); /* Dynamic font size based on viewport height */
             color: #555;
         }
 
@@ -43,6 +48,8 @@
             cursor: pointer;
             font-size: 18px;
             color: #555;
+            padding: 10px;
+            border-radius: 5px; /* Rounded corners */
         }
 
         .dark-theme {
@@ -66,15 +73,15 @@
 
             const timeZone = Intl.DateTimeFormat().resolvedOptions().timeZone;
 
-            document.getElementById('time').innerText = `Current Time: ${timeString}`;
+            document.getElementById('time').innerText = timeString;
             document.getElementById('timezone').innerText = `Your Timezone: ${timeZone}`;
         }
 
         function toggleDarkMode() {
             const body = document.body;
-            body.classList.toggle('dark-theme');
-
             const darkModeToggle = document.getElementById('dark-mode-toggle');
+
+            body.classList.toggle('dark-theme');
             const isDarkMode = body.classList.contains('dark-theme');
 
             darkModeToggle.innerText = isDarkMode ? 'Light Mode' : 'Dark Mode';
