--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#rodar">Rodar Bot</a></li>
                     <li><a href="./ttmc">Text To Morse Code</a></li>
                     <li><a href="./calculator">Simple Online Calculator</a></li>
-                    <li><a href="./clock">Simple Online Calculator</a></li>
+                    <li><a href="./clock">Stupid Simple Clock</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
