--- a/spotify/callback.html
+++ b/spotify/callback.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Spotify Callback Page</h1>
-    <script>
-        // Your callback handling JavaScript code here
-        // Extract authorization code or access token and process as needed
-    </script>
+    <div id="top-artists"></div>
+    <div id="top-songs"></div>
+    <div id="top-genres"></div>
+    <script src="/scriptspotify.js"></script>
 </body>
 </html>
