--- a/spotify.html
+++ b/spotify.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylespotify.css">
-    <title>Spotify Stats Tracker</title>
+    <title>Spotify Authorization</title>
 </head>
 <body>
     <div class="container">
-        <h1>Spotify Stats Tracker</h1>
+        <h1>Spotify Authorization</h1>
         <button onclick="authorizeSpotify()">Authorize with Spotify</button>
-        <div id="stats-container"></div>
     </div>
 
     <script src="scriptspotify.js"></script>
