--- a/spotify/callback.html
+++ b/spotify/callback.html
@@ -3,13 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Callback</title>
+    <title>Your Spotify Stats</title>
+    <style>
+        body {
+            background-color: #121212; /* Dark background color */
+            color: #fff; /* Light text color */
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1 {
+            color: #1db954; /* Spotify green color */
+        }
+
+        h2 {
+            color: #1db954; /* Spotify green color */
+            margin-top: 20px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin: 10px 0;
+        }
+    </style>
 </head>
 <body>
-    <h1>Spotify Callback Page</h1>
+    <h1>Your Spotify Stats</h1>
     <div id="top-artists"></div>
     <div id="top-songs"></div>
     <div id="top-genres"></div>
-    <script src="/scriptspotify.js"></script>
+    <script src="scriptspotify.js"></script>
 </body>
 </html>
