--- a/spotify/callback.html
+++ b/spotify/callback.html
@@ -38,6 +38,6 @@
     <div id="top-artists"></div>
     <div id="top-songs"></div>
     <div id="top-genres"></div>
-    <script src="scriptspotify.js"></script>
+    <script src="/scriptspotify.js"></script>
 </body>
 </html>
