--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li><a href="./ttmc">Text To Morse Code</a></li>
                     <li><a href="./calculator">Simple Online Calculator</a></li>
                     <li><a href="./clock">Stupid Simple Clock</a></li>
+                    <li><a href="./spotify.html">Spotify Stats</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
