--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <li><a href="">Home</a></li>
                     <li><a href="#whatisthis">What Is This</a></li>
                     <li><a href="#rodar">Rodar Bot</a></li>
+                    <li><a href="./spotifystats">Spotify Stats</a></li>
                     <li><a href="./ttmc">Text To Morse Code</a></li>
                     <li><a href="./calculator">Simple Online Calculator</a></li>
                     <li><a href="./clock">Stupid Simple Clock</a></li>
-                    <li><a href="./spotify.html">Spotify Stats</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
@@ -100,6 +100,34 @@
             <h2 id="rht">Add Rodar to your server now!</h2>
             <p id="rht">If this convinced you (hopefully), you can add your Discord Bot with the button below!</p>
             <a href="https://discord.com/api/oauth2/authorize?client_id=1178748710461640754&permissions=8&scope=bot">Click Here to Add The Bot</a>
+        </div>
+    </section>
+
+    <!------Spotify Stats------>
+
+    <section class="spotifystats" id="spst">
+        <div class="stats">
+            <h1>Spotify Stats</h1>
+            <br>
+            <p>See your Spotify Statistics.</p>
+            <div class="textandimg">
+                <div class="taicol">
+                    <p>See your most listened to<br><br><br> artists,</p>
+                    <img src="images/stats.png" alt="Top Artists">
+                </div>
+                <div class="taicol">
+                    <p>Songs,</p>
+                    <img src="images/statssongs.png" alt="Top Songs">
+                </div>
+                <div class="taicol">
+                    <p>And Genres.</p>
+                    <img src="images/genres.png" alt="Top Genres">
+                </div>
+            </div>
+            <br>
+            <div class="btnstats">
+                <p><a href="./spotify">Check your stats here.</a></p>
+            </div>
         </div>
     </section>
 
