--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
             <br>
             <div class="btnstats">
-                <p><a href="./spotify">Check your stats here.</a></p>
+                <p><a href="./spotifystats">Check your stats here.</a></p>
             </div>
         </div>
     </section>
