--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="#whatisthis">What Is This</a></li>
                     <li><a href="#rodar">Rodar Bot</a></li>
                     <li><a href="./spotifystats">Spotify Stats</a></li>
+                    <li><a href="./ascii">Ascii Image Generator</a></li>
                     <li><a href="./ttmc">Text To Morse Code</a></li>
                     <li><a href="./calculator">Simple Online Calculator</a></li>
                     <li><a href="./clock">Stupid Simple Clock</a></li>
