--- a/2048.html
+++ b/2048.html
@@ -162,45 +162,50 @@
 
 <!-- Mobile support for swipe gestures -->
 <script>
-  let touchStartX, touchStartY, touchEndX, touchEndY;
-
-  document.addEventListener('touchstart', function (event) {
-    touchStartX = event.touches[0].clientX;
-    touchStartY = event.touches[0].clientY;
-  });
-
-  document.addEventListener('touchend', function (event) {
-    touchEndX = event.changedTouches[0].clientX;
-    touchEndY = event.changedTouches[0].clientY;
-
-    handleSwipe();
-  });
-
-  function handleSwipe() {
-    const deltaX = touchEndX - touchStartX;
-    const deltaY = touchEndY - touchStartY;
-
-    const minSwipeDistance = 50; // Adjust this value as needed
-
-    if (Math.abs(deltaX) > minSwipeDistance || Math.abs(deltaY) > minSwipeDistance) {
-      if (Math.abs(deltaX) > Math.abs(deltaY)) {
-        // Horizontal swipe
-        if (deltaX > 0) {
-          move('right');
+    let touchStartX, touchStartY, touchEndX, touchEndY;
+  
+    document.addEventListener('touchstart', function (event) {
+      touchStartX = event.touches[0].clientX;
+      touchStartY = event.touches[0].clientY;
+    });
+  
+    document.addEventListener('touchmove', function (event) {
+      event.preventDefault(); // Prevent the default behavior, including page refresh
+    });
+  
+    document.addEventListener('touchend', function (event) {
+      touchEndX = event.changedTouches[0].clientX;
+      touchEndY = event.changedTouches[0].clientY;
+  
+      handleSwipe();
+    });
+  
+    function handleSwipe() {
+      const deltaX = touchEndX - touchStartX;
+      const deltaY = touchEndY - touchStartY;
+  
+      const minSwipeDistance = 50; // Adjust this value as needed
+  
+      if (Math.abs(deltaX) > minSwipeDistance || Math.abs(deltaY) > minSwipeDistance) {
+        if (Math.abs(deltaX) > Math.abs(deltaY)) {
+          // Horizontal swipe
+          if (deltaX > 0) {
+            move('right');
+          } else {
+            move('left');
+          }
         } else {
-          move('left');
-        }
-      } else {
-        // Vertical swipe
-        if (deltaY > 0) {
-          move('down');
-        } else {
-          move('up');
+          // Vertical swipe
+          if (deltaY > 0) {
+            move('down');
+          } else {
+            move('up');
+          }
         }
       }
     }
-  }
-</script>
+  </script>
+  
 
 <body>
   <div id="game-title">2048 Game</div>
