--- a/2048.html
+++ b/2048.html
@@ -160,7 +160,7 @@
   </style>
 </head>
 
-<!-- Mobile support for swipe gestures -->
+<!-- Mobile support for swipe gestures a-->
 <script>
     let touchStartX, touchStartY, touchEndX, touchEndY;
   
