--- a/2048.html
+++ b/2048.html
@@ -160,17 +160,21 @@
   </style>
 </head>
 
-<!-- Mobile support for swipe gestures a-->
+<!-- Mobile support for swipe gestures -->
 <script>
     let touchStartX, touchStartY, touchEndX, touchEndY;
   
     document.addEventListener('touchstart', function (event) {
       touchStartX = event.touches[0].clientX;
       touchStartY = event.touches[0].clientY;
+      
+      // Prevent default to avoid page refresh
+      event.preventDefault();
     });
   
     document.addEventListener('touchmove', function (event) {
-      event.preventDefault(); // Prevent the default behavior, including page refresh
+      // Prevent default to avoid page refresh
+      event.preventDefault();
     });
   
     document.addEventListener('touchend', function (event) {
@@ -205,6 +209,7 @@
       }
     }
   </script>
+  
   
 
 <body>
