--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="#rodar">Rodar Bot</a></li>
                     <li><a href="./spotifystats">Spotify Stats</a></li>
                     <li><a href="./2048">2048</a></li>
+                    <li><a href="./qrcodemaster">QR Code Master</a></li>
                     <li><a href="./ascii">Ascii Image Generator</a></li>
                     <li><a href="./ttmc">Text To Morse Code</a></li>
                     <li><a href="./calculator">Simple Online Calculator</a></li>
