--- a/index.html
+++ b/index.html
@@ -134,6 +134,72 @@
         </div>
     </section>
 
+    <!------Other Stuff------>
+    <section class="otherstuff" id="othst">
+        <div class="ots">
+            <h1>More Of My Stuff</h1>
+            <br>
+            <p>Here are more of the stuff i've made.</p>
+            <br>
+            <br>
+            <br>
+            <div class="otsl">
+                <div class="otsli">
+                    <h1>2048</h1>
+                    <br>
+                    <p>The classic game of 2048!</p>
+                    <br>
+                    <br>
+                    <p><a href="./ttmc">Click here to play!</a></p>
+                </div>
+                <br>
+                <br>
+                <br>
+                <div class="otsli">
+                    <h1>QR Code Master</h1>
+                    <br>
+                    <p>Turn any link or text into a QR Code!</p>
+                    <br>
+                    <br>
+                    <p><a href="./qrcodemaster">Click here to enter!</a></p>
+                </div>
+                <br>
+                <br>
+                <br>
+                <div class="otsli">
+                    <h1>ASCII Art Generator</h1>
+                    <br>
+                    <p>Turn any image into ASCII text!</p>
+                    <br>
+                    <br>
+                    <p><a href="./ascii">Click here to enter!</a></p>
+                </div>
+                <br>
+                <br>
+                <br>
+                <div class="otsli">
+                    <h1>Morse Code Translator</h1>
+                    <br>
+                    <p>Translate text to morse code and morse code to text!</p>
+                    <br>
+                    <br>
+                    <p><a href="./ttmc">Click here to enter!</a></p>
+                </div>
+                <br>
+                <br>
+                <br>
+                <div class="otsli">
+                    <h1>Simple Calculator</h1>
+                    <br>
+                    <p>uh... calculate?</p>
+                    <br>
+                    <br>
+                    <p><a href="./calculator">Click here to calculate i guess</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!------JavaScript for Toggle Menu------>
 <script>
 
