--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <p>The classic game of 2048!</p>
                     <br>
                     <br>
-                    <p><a href="./ttmc">Click here to play!</a></p>
+                    <p><a href="./2048">Click here to play!</a></p>
                 </div>
                 <br>
                 <br>
