--- a/index.html
+++ b/index.html
@@ -196,6 +196,17 @@
                     <br>
                     <p><a href="./calculator">Click here to calculate i guess</a></p>
                 </div>
+                <br>
+                <br>
+                <br>
+                <div class="otsli">
+                    <h1>HTML Coder</h1>
+                    <br>
+                    <p>Code in HTML and see it in real time!</p>
+                    <br>
+                    <br>
+                    <p><a href="/Coder/coder">Click here to code!</a></p>
+                </div>
             </div>
         </div>
     </section>
