--- a/ttmc.html
+++ b/ttmc.html
@@ -4,7 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morse Code Translator</title>
-    <link rel="stylesheet" href="stylettmc.css">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #121212;
+            color: #ffffff;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        h1 {
+            color: #61dafb;
+        }
+
+        label {
+            display: block;
+            margin: 10px 0;
+        }
+
+        textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+        }
+
+        button {
+            background-color: #61dafb;
+            color: #000;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        button:hover {
+            background-color: #4fa3d1;
+        }
+    </style>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             function translate() {
@@ -60,18 +106,14 @@
         Morse to Text
     </label>
 
-    <br><br>
+    <br>
 
     <label for="inputOutput">Enter text or Morse code:</label>
-    <textarea id="inputOutput" rows="4" cols="50"></textarea>
-
-    <br><br>
+    <textarea id="inputOutput" rows="4" placeholder="Enter text or Morse code"></textarea>
 
     <button type="button" id="translateButton">Translate</button>
 
-    <br><br>
-
     <label for="outputText">Output:</label>
-    <textarea id="outputText" rows="4" cols="50" readonly></textarea>
+    <textarea id="outputText" rows="4" readonly placeholder="Translation will appear here"></textarea>
 </body>
 </html>
